# Modulbank_test_assignment

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  compose.integration.yaml  compose.test.yaml  compose.yaml  conftest.py  pyproject.toml  pytest.ini
app/: main.py
app/api/: dependency.py
app/api/routes/: health.py  operations_routers.py
app/core/: config.py
app/db/: session.py
app/exceptions/: handler_registration.py
app/exceptions/handlers/: operation_handlers.py
app/exceptions/units/: operation_exception.py
app/models/: __init__.py  dispatch.py  operation.py  operation_event.py  receipt.py
app/repositories/: dispatch.py  operation_event.py  operations.py  receipt.py
app/schemas/: events_schemas.py  operation_schemas.py
app/services/: operation_service.py
migrations/: env.py
migrations/versions/: 955c7d3f4948_add_sequence_for_id_field_in_operations.py  9f524647c4cd_initial.py
tests/test_integration/: test_container.py
tests/test_models/: test_dispatch.py  test_operation.py  test_operation_event.py  test_receipt.py
tests/test_repositories/: test_dispatch_repository.py  test_operation_event_repository.py  test_operations.py  test_receipt_repository.py
tests/test_routers/: test_health.py  test_operations_router.py
tests/test_services/: test_operation_service.py
